:art: Make InformatieObjectType.vertrouwelijkheidaanduiding a required field
* must be specified and exposed in the API so that consumers can read
  this value and use it
* InformatieObject _can_ exist independent from a Zaak, so we _require_
  InformatieObjectType to have vertrouwelijkheidaanduiding set. There
  is _no_ derivation via related Zaaktype, since that is ill-defined
  anyway (=what if involved Zaaktype have different VA - which one is
  'the correct one'?)
