# src/swagger2.0.json
@@ -3380,8 +3380,9 @@
         },
         "InformatieObjectType": {
             "required": [
+                "catalogus",
                 "omschrijving",
-                "catalogus"
+                "vertrouwelijkheidaanduiding"
             ],
             "type": "object",
             "properties": {
@@ -3391,6 +3392,12 @@
                     "format": "uri",
                     "readOnly": true
                 },
+                "catalogus": {
+                    "title": "Maakt deel uit van",
+                    "description": "De CATALOGUS waartoe dit INFORMATIEOBJECTTYPE behoort.",
+                    "type": "string",
+                    "format": "uri"
+                },
                 "omschrijving": {
                     "title": "Omschrijving",
                     "description": "Omschrijving van de aard van informatieobjecten van dit INFORMATIEOBJECTTYPE.",
@@ -3398,11 +3405,20 @@
                     "maxLength": 80,
                     "minLength": 1
                 },
-                "catalogus": {
-                    "title": "Maakt deel uit van",
-                    "description": "De CATALOGUS waartoe dit INFORMATIEOBJECTTYPE behoort.",
+                "vertrouwelijkheidaanduiding": {
+                    "title": "Vertrouwelijkheidaanduiding",
+                    "description": "Aanduiding van de mate waarin informatieobjecten van dit INFORMATIEOBJECTTYPE voor de openbaarheid bestemd zijn.",
                     "type": "string",
-                    "format": "uri"
+                    "enum": [
+                        "openbaar",
+                        "beperkt openbaar",
+                        "intern",
+                        "zaakvertrouwelijk",
+                        "vertrouwelijk",
+                        "confidentieel",
+                        "geheim",
+                        "zeer geheim"
+                    ]
                 }
             }
         },
