# src/ztc/datamodel/models/informatieobjecttype.py
@@ -66,17 +66,17 @@ class InformatieObjectType(GeldigheidMixin, models.Model):
         unique=True, default=_uuid.uuid4,
         help_text="Unieke resource identifier (UUID4)"
     )
-    informatieobjecttype_omschrijving = models.CharField(
+    omschrijving = models.CharField(
         _('omschrijving'), max_length=80,
         help_text=_('Omschrijving van de aard van informatieobjecten van dit INFORMATIEOBJECTTYPE.'))
-    informatieobjecttype_omschrijving_generiek = models.ForeignKey(
+    omschrijving_generiek = models.ForeignKey(
         'datamodel.InformatieObjectTypeOmschrijvingGeneriek', verbose_name=_('omschrijving generiek'),
         blank=True, null=True, on_delete=models.CASCADE,
         help_text=_('Algemeen gehanteerde omschrijving van het INFORMATIEOBJECTTYPE.'))
     informatieobjectcategorie = models.CharField(
         _('categorie'), max_length=80,
         help_text=_('Typering van de aard van informatieobjecten van dit INFORMATIEOBJECTTYPE.'))
-    informatieobjecttypetrefwoord = ArrayField(
+    trefwoord = ArrayField(
         models.CharField(_('trefwoord'), max_length=30),
         blank=True, help_text=_('Trefwoord(en) waarmee informatieobjecten van het INFORMATIEOBJECTTYPE kunnen worden '
                                 'gekarakteriseerd. (Gebruik een komma om waarden van elkaar te onderscheiden.)'))
@@ -84,7 +84,8 @@ class InformatieObjectType(GeldigheidMixin, models.Model):
         _('vertrouwelijkheidaanduiding'),
         help_text=_(
             'Aanduiding van de mate waarin informatieobjecten van dit INFORMATIEOBJECTTYPE voor de '
-            'openbaarheid bestemd zijn.'))
+            'openbaarheid bestemd zijn.')
+    )
     model = ArrayField(
         models.URLField(_('model')),
         blank=True, help_text=_(
@@ -100,40 +101,16 @@ class InformatieObjectType(GeldigheidMixin, models.Model):
     )
 
     zaaktypes = models.ManyToManyField(
-        'datamodel.ZaakType', verbose_name=_('zaaktypes'), related_name='heeft_relevant_informatieobjecttype',
-        through='datamodel.ZaakInformatieobjectType', help_text=_(
-            'ZAAKTYPE met ZAAKen die relevant kunnen zijn voor dit INFORMATIEOBJECTTYPE'))
+        'datamodel.ZaakType', verbose_name=_('zaaktypes'),
+        related_name='heeft_relevant_informatieobjecttype',
+        through='datamodel.ZaakInformatieobjectType',
+        help_text=_('ZAAKTYPE met ZAAKen die relevant kunnen zijn voor dit INFORMATIEOBJECTTYPE')
+    )
 
     class Meta:
-        mnemonic = 'DCT'
-        unique_together = ('catalogus', 'informatieobjecttype_omschrijving')
+        unique_together = ('catalogus', 'omschrijving')
         verbose_name = _('Informatieobjecttype')
         verbose_name_plural = _('Informatieobjecttypen')
-        ordering = unique_together
-
-        filter_fields = (
-            'catalogus',
-            'informatieobjectcategorie',
-        )
-        ordering_fields = filter_fields
-        search_fields = (
-            'informatieobjecttype_omschrijving',
-            'informatieobjectcategorie',
-            'informatieobjecttypetrefwoord',
-            'toelichting',
-        )
-
-    def clean(self):
-        """
-        Voor datum_begin_geldigheid geldt:
-        - De datum is gelijk aan een Versiedatum van een gerelateerd zaaktype.
-
-        Voor datum_einde_geldigheid geldt:
-        - De datum is gelijk aan of gelegen na de datum zoals opgenomen onder
-          'Datum begin geldigheid informatieobjecttype’.
-        - De datum is gelijk aan de dag voor een Versiedatum van een gerelateerd zaaktype.
-        """
-        super().clean()
 
     def __str__(self):
         return '{} - {}'.format(self.catalogus, self.informatieobjecttype_omschrijving)
